# LineBot-Subsidy

./: .dockerignore  Dockerfile  LICENSE  Makefile  README.md  fly.toml
.github/: codeql.yml  dependabot.yml
.github/workflows/: build-image.yml  codeql.yml  dev.yml  docker-image.yml  fly.yml  lint-python.yml  main.yml  test.yml
LocalFakeData/: .env  Dockerfile  app.py  config.py  data.py  gunicorn.py  main.py  pyproject.toml  requirements.txt
LocalFakeData/line/: message_event.py
MyFirstFastPro/: requirements.txt  working.py
docs/: install.md
mysql/: fly.toml
src/: config.py  data.py  main.py  pyproject.toml  requirements.txt
src/line/: message_event.py  message_handler.py  urls.py
